--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "material-ui": "^0.18.4",
     "prop-types": "^15.5.10",
     "radium": "^0.19.1",
+    "random-name": "^0.1.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-flexbox-grid": "^1.1.3",
